2007-07-27  Neal H. Walfield  <neal@gnu.org>

	* l4/abi.h: New file.
	* v2/Makefile.am: New file.
	* v2/ia32/Makefile.am: New file.
	* v2/ia32/l4/abi/bits/kip.h: New file.
	* v2/l4/abi/abi.h: New file.
	* v2/l4/abi/kip.h: New file.
	* x2/Makefile.am: New file.
	* x2/l4/abi/abi.h: New file.
	* x2/l4/abi/kip.h: New file.
	* headers.m4: Configure a link from libl4/l4/abi.h to
	include/l4/abi.h, libl4/${l4_abi}/l4/abi/kip.h to
	include/l4/abi/kip.h, libl4/${l4_abi}/l4/abi/abi.h to
	include/l4/abi/abi.h.  If L4_AVI is v2, then also configure a link
	from libl4/v2/${arch}/l4/abi/bits/kip.h to
	include/l4/abi/bits/kip.h.
	* Makefile.am [L4_ABI_V2]: Set L4_ABI_SUBDIR to v2.
	[L4_ABI_X2]: Set L4_ABI_SUBDIR to x2.
	(SUBDIRS): Also include $(L4_ABI_SUBDIR).
	* l4.h: Include <l4/abi.h>.
	* l4/kip.h: Include <l4/abi/kip.h>.
	(_L4_API_VERSION_L4SEC): New define.
	(_L4_API_VERSION_N1): Likewise.
	(_L4_API_VERSION_2PP): Likewise.
	(__L4_kernel_version_t): New typedef.
	(_L4_kernel_version): Rather than returning the version in the
	arguments, return a __L4_kernel_version_t.  Update callers.
	(_L4_page_info_t): Move from here...
	* l4/x2/l4/abi/kip.h (_L4_page_info_t): ... to here.
	* l4/kip.h (__L4_page_info_t): Move from here...
	* l4/x2/l4/abi/kip.h (__L4_page_info_t): ... to here.
	* l4/kip.h (struct _L4_kip): Move from here...
	* l4/x2/l4/abi/kip.h (struct _L4_kip): ... to here.
	* l4/kip.h (__L4_proc_desc_t): Move from here...
	* l4/x2/l4/abi/kip.h (__L4_proc_desc_t): ... to here.
	* l4/kip.h (_L4_proc_desc_t): Move from here...
	* l4/x2/l4/abi/kip.h (_L4_proc_desc_t): ... to here.
	* l4/kip.h (__L4_kern_desc_t): Move from here...
	* l4/x2/l4/abi/kip.h (__L4_kern_desc_t): ... to here.
	* l4/kip.h (_L4_kern_desc_t): Move from here...
	* l4/x2/l4/abi/kip.h (_L4_kern_desc_t): ... to here.
	* l4/kip.h (_L4_api_flags): Move from here...
	* l4/x2/l4/abi/kip.h (_L4_api_flags): ... to here.
	* l4/kip.h (_L4_kernel_desc): Move from here...