@@ -2,22 +2,19 @@
    Copyright (C) 2004 Free Software Foundation, Inc.
    Written by Marcus Brinkmann <marcus@gnu.org>.
 
-   This file is part of the GNU L4 library.
- 
    The GNU L4 library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Lesser General Public License
-   as published by the Free Software Foundation; either version 2.1 of
+   as published by the Free Software Foundation; either version 3 of
    the License, or (at your option) any later version.
- 
+   
    The GNU L4 library is distributed in the hope that it will be
    useful, but WITHOUT ANY WARRANTY; without even the implied warranty
    of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Lesser General Public License for more details.
- 
+   
    You should have received a copy of the GNU Lesser General Public
-   License along with the GNU L4 library; if not, write to the Free
-   Software Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
-   02111-1307, USA.  */
+   License along with this program.  If not, see
+   <http://www.gnu.org/licenses/>.  */
 
 #ifndef _L4_PAGEFAULT_H
 # error "Never use <l4/gnu/pagefault.h> directly; include <l4/pagefault.h> instead."
@@ -42,6 +39,17 @@ _L4_attribute_always_inline
 l4_pagefault (l4_msg_tag_t tag, l4_word_t *access, l4_word_t *ip)
 {
   return _L4_pagefault (tag, access, ip);
+}
+
+
+/* Formulate a reply message (in the thread's virtual registers) to a
+   previous pagefault request message with the provided map or grant
+   item.  */
+static inline void
+_L4_attribute_always_inline
+l4_pagefault_reply_formulate (void *item)
+{
+  _L4_pagefault_reply_formulate (item);
 }
 
 
